chore: use query vs param
